# qdrant_fdw

./: CMakeLists.txt  README.md  filter.c  filter.h  qdrant_fdw--1.0.sql  qdrant_fdw.c  qdrant_fdw.control  qdrant_fdw.h
